saving dataset,list of graphs instead of datalodaer

--- a/mol2dreams/notebooks/massspecgym_dreams_embedding.ipynb
+++ b/mol2dreams/notebooks/massspecgym_dreams_embedding.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-08T08:36:16.027531Z",
-     "start_time": "2024-10-08T08:36:09.979586Z"
+     "end_time": "2024-10-09T11:51:57.074770Z",
+     "start_time": "2024-10-09T11:51:51.254604Z"
     }
    },
    "source": [
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bl/73ckjztx5js4cc0cj85qgvlm0000gn/T/ipykernel_55255/1913502961.py:2: DeprecationWarning: 'cgitb' is deprecated and slated for removal in Python 3.13\n",
+      "/var/folders/bl/73ckjztx5js4cc0cj85qgvlm0000gn/T/ipykernel_64884/1913502961.py:2: DeprecationWarning: 'cgitb' is deprecated and slated for removal in Python 3.13\n",
       "  from cgitb import small\n",
       "/Users/macbook/UTILS/anaconda3/envs/mol2dreams/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T08:36:16.170987Z",
-     "start_time": "2024-10-08T08:36:16.036732Z"
+     "end_time": "2024-10-09T11:51:57.273892Z",
+     "start_time": "2024-10-09T11:51:57.081562Z"
     }
    },
    "cell_type": "code",
@@ -86,8 +86,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T15:10:10.791452Z",
-     "start_time": "2024-10-08T15:10:10.788730Z"
+     "end_time": "2024-10-09T11:51:57.324229Z",
+     "start_time": "2024-10-09T11:51:57.321580Z"
     }
    },
    "cell_type": "code",
@@ -123,7 +123,7 @@
    ],
    "id": "621eece674798da6",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -195,8 +195,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T08:36:30.724521Z",
-     "start_time": "2024-10-08T08:36:30.721136Z"
+     "end_time": "2024-10-09T11:52:01.844352Z",
+     "start_time": "2024-10-09T11:52:01.839689Z"
     }
    },
    "cell_type": "code",
@@ -232,8 +232,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T08:36:38.370539Z",
-     "start_time": "2024-10-08T08:36:32.700494Z"
+     "end_time": "2024-10-09T11:52:10.203586Z",
+     "start_time": "2024-10-09T11:52:04.332706Z"
     }
    },
    "cell_type": "code",
@@ -263,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing train: 100%|██████████| 194119/194119 [00:03<00:00, 52709.04it/s]\n"
+      "Featurizing train: 100%|██████████| 194119/194119 [00:03<00:00, 53033.81it/s]\n"
      ]
     },
     {
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing val: 100%|██████████| 19429/19429 [00:00<00:00, 51145.91it/s]\n"
+      "Featurizing val: 100%|██████████| 19429/19429 [00:00<00:00, 51445.06it/s]\n"
      ]
     }
    ],
@@ -312,8 +312,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T08:37:05.975832Z",
-     "start_time": "2024-10-08T08:37:05.973245Z"
+     "end_time": "2024-10-09T11:52:11.293054Z",
+     "start_time": "2024-10-09T11:52:11.289501Z"
     }
    },
    "cell_type": "code",
@@ -324,13 +324,13 @@
    ],
    "id": "e56941028eb807f8",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-08T08:37:08.366964Z",
-     "start_time": "2024-10-08T08:37:06.852691Z"
+     "end_time": "2024-10-09T11:52:14.368278Z",
+     "start_time": "2024-10-09T11:52:13.118190Z"
     }
    },
    "cell_type": "code",
@@ -353,8 +353,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing dataset: 100%|██████████| 100/100 [00:00<00:00, 132.47it/s]\n",
-      "Featurizing dataset: 100%|██████████| 100/100 [00:00<00:00, 132.78it/s]"
+      "Featurizing dataset: 100%|██████████| 100/100 [00:00<00:00, 160.12it/s]\n",
+      "Featurizing dataset: 100%|██████████| 100/100 [00:00<00:00, 161.31it/s]"
      ]
     },
     {
@@ -373,7 +373,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "metadata": {
@@ -447,6 +447,31 @@
     }
    ],
    "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T11:54:38.067931Z",
+     "start_time": "2024-10-09T11:54:38.052995Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "save_path = \"../../data/data/precomputed_batches_small.pt\"\n",
+    "# torch.save(data_list_train, save_path)\n",
+    "print(f\"Graph list is saved {save_path}\")"
+   ],
+   "id": "bb3512ef1624e4c7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph list is saved ../../data/data/precomputed_batches_small.pt\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -557,6 +582,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# NOT USED ANYMORE, NOW SAVING DATASET NOT DATALOADER!!! UPWARD IS REWRITTEN \n",
     "save_path = \"../../data/data/precomputed_batches_small.pt\"\n",
     "\n",
     "# torch.save(saved_batches, save_path)\n",
