update notebooks, cleaning

--- a/mol2dreams/notebooks/molecule_feauturizer.ipynb
+++ b/mol2dreams/notebooks/molecule_feauturizer.ipynb
@@ -88,10 +88,9 @@
     "    },\n",
     "    'feature_attributes': {\n",
     "        'atom_symbol': {\n",
-    "            'top_n_atoms': 42,        # Number of top atoms to recognize\n",
-    "            'include_other': True,    # Whether to include an 'Unknown' category\n",
+    "            'top_n_atoms': 42,        \n",
+    "            'include_other': True,   \n",
     "        },\n",
-    "        # Additional feature-specific attributes can be added here\n",
     "    }\n",
     "}\n",
     "\n",
