--- a/mol2dreams/notebooks/fine_tune.ipynb
+++ b/mol2dreams/notebooks/fine_tune.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-09T15:05:59.106662Z",
-     "start_time": "2024-10-09T15:05:59.103433Z"
+     "end_time": "2024-10-10T05:47:10.579905Z",
+     "start_time": "2024-10-10T05:47:09.166772Z"
     }
    },
    "source": [
@@ -18,29 +18,29 @@
     "from mol2dreams.datasets.TripletDataset import TripletDataset"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T15:06:00.646980Z",
-     "start_time": "2024-10-09T15:06:00.638950Z"
+     "end_time": "2024-10-10T05:47:10.588683Z",
+     "start_time": "2024-10-10T05:47:10.582960Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "with open(\"/Users/macbook/CODE/mol2DreaMS/mol2dreams/configs/local_config_fine_tune_triplet.yaml\") as stream:\n",
+    "with open(\"/Users/macbook/CODE/mol2DreaMS/mol2dreams/configs/local_config_triplet_cosine_fine_tune.yaml\") as stream:\n",
     "    config = yaml.safe_load(stream)"
    ],
    "id": "194a7c4082506c64",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T15:06:05.371720Z",
-     "start_time": "2024-10-09T15:06:01.995033Z"
+     "end_time": "2024-10-10T05:47:13.812035Z",
+     "start_time": "2024-10-10T05:47:10.625388Z"
     }
    },
    "cell_type": "code",
@@ -51,17 +51,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded pretrained weights from /Users/macbook/CODE/mol2DreaMS/data/logs/mol2dreams/best_model.pt\n"
+      "Loaded pretrained weights from /Users/macbook/CODE/mol2DreaMS/data/logs/mol2dreams/20241010_072128_mol2dreams/best_model.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/macbook/UTILS/anaconda3/envs/mol2dreams/lib/python3.11/site-packages/torch/nn/utils/weight_norm.py:28: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
+      "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T15:06:15.493430Z",
-     "start_time": "2024-10-09T15:06:13.060803Z"
+     "end_time": "2024-10-10T05:47:16.051480Z",
+     "start_time": "2024-10-10T05:47:13.816675Z"
     }
    },
    "cell_type": "code",
@@ -72,17 +80,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.0017, Pos Dist: 0.0005, Neg Dist: 23.8343\n"
+      "Test Loss: 0.3614, Pos Cosine: 1.0000, Neg Cosine: 0.7386\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T15:07:40.827637Z",
-     "start_time": "2024-10-09T15:06:25.470414Z"
+     "end_time": "2024-10-10T05:48:30.164090Z",
+     "start_time": "2024-10-10T05:47:16.112891Z"
     }
    },
    "cell_type": "code",
@@ -93,40 +101,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 0.1222, Pos Dist: 4.6389, Neg Dist: 13.1186\n",
-      "Epoch [2/10], Loss: 0.0636, Pos Dist: 5.3190, Neg Dist: 17.7120\n",
-      "Validation Loss: 0.0021, Pos Dist: 0.0019, Neg Dist: 17.5857\n",
-      "Best model saved at epoch 2 with validation loss 0.0021\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241009_170605_mol2dreams/model_epoch_2.pt\n",
-      "Epoch [3/10], Loss: 0.0579, Pos Dist: 5.4286, Neg Dist: 17.5011\n",
-      "Epoch [4/10], Loss: 0.0504, Pos Dist: 5.4089, Neg Dist: 18.1001\n",
-      "Validation Loss: 0.0020, Pos Dist: 0.0006, Neg Dist: 17.6245\n",
-      "Best model saved at epoch 4 with validation loss 0.0020\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241009_170605_mol2dreams/model_epoch_4.pt\n",
-      "Epoch [5/10], Loss: 0.0568, Pos Dist: 5.4566, Neg Dist: 19.4341\n",
-      "Epoch [6/10], Loss: 0.0440, Pos Dist: 6.1568, Neg Dist: 22.6493\n",
-      "Validation Loss: 0.0012, Pos Dist: 0.0018, Neg Dist: 24.1339\n",
-      "Best model saved at epoch 6 with validation loss 0.0012\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241009_170605_mol2dreams/model_epoch_6.pt\n",
-      "Epoch [7/10], Loss: 0.0461, Pos Dist: 6.4102, Neg Dist: 25.4160\n",
-      "Epoch [8/10], Loss: 0.0465, Pos Dist: 6.7204, Neg Dist: 25.6796\n",
-      "Validation Loss: 0.0005, Pos Dist: 0.0016, Neg Dist: 23.3681\n",
-      "Best model saved at epoch 8 with validation loss 0.0005\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241009_170605_mol2dreams/model_epoch_8.pt\n",
-      "Epoch [9/10], Loss: 0.0306, Pos Dist: 6.5687, Neg Dist: 25.6146\n",
-      "Epoch [10/10], Loss: 0.0259, Pos Dist: 6.4265, Neg Dist: 26.4769\n",
-      "Validation Loss: 0.0006, Pos Dist: 0.0033, Neg Dist: 25.9217\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241009_170605_mol2dreams/model_epoch_10.pt\n"
+      "Epoch [1/10], Loss: 0.1375, Pos Sim: 0.9640, Neg Sim: 0.9266\n",
+      "Epoch [2/10], Loss: 0.1016, Pos Sim: 0.9774, Neg Sim: 0.9758\n",
+      "Validation Loss: 0.1059, Pos Sim: 1.0000, Neg Sim: 0.9941\n",
+      "Best model saved at epoch 2 with validation loss 0.1059\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_074713_mol2dreams/model_epoch_2.pt\n",
+      "Epoch [3/10], Loss: 0.1010, Pos Sim: 0.9813, Neg Sim: 0.9803\n",
+      "Epoch [4/10], Loss: 0.1005, Pos Sim: 0.9836, Neg Sim: 0.9831\n",
+      "Validation Loss: 0.1035, Pos Sim: 1.0000, Neg Sim: 0.9965\n",
+      "Best model saved at epoch 4 with validation loss 0.1035\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_074713_mol2dreams/model_epoch_4.pt\n",
+      "Epoch [5/10], Loss: 0.1004, Pos Sim: 0.9850, Neg Sim: 0.9846\n",
+      "Epoch [6/10], Loss: 0.1004, Pos Sim: 0.9860, Neg Sim: 0.9856\n",
+      "Validation Loss: 0.1024, Pos Sim: 1.0000, Neg Sim: 0.9976\n",
+      "Best model saved at epoch 6 with validation loss 0.1024\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_074713_mol2dreams/model_epoch_6.pt\n",
+      "Epoch [7/10], Loss: 0.1001, Pos Sim: 0.9865, Neg Sim: 0.9863\n",
+      "Epoch [8/10], Loss: 0.1002, Pos Sim: 0.9872, Neg Sim: 0.9870\n",
+      "Validation Loss: 0.1022, Pos Sim: 1.0000, Neg Sim: 0.9978\n",
+      "Best model saved at epoch 8 with validation loss 0.1022\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_074713_mol2dreams/model_epoch_8.pt\n",
+      "Epoch [9/10], Loss: 0.1003, Pos Sim: 0.9880, Neg Sim: 0.9877\n",
+      "Epoch [10/10], Loss: 0.1002, Pos Sim: 0.9891, Neg Sim: 0.9889\n",
+      "Validation Loss: 0.1018, Pos Sim: 1.0000, Neg Sim: 0.9982\n",
+      "Best model saved at epoch 10 with validation loss 0.1018\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_074713_mol2dreams/model_epoch_10.pt\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-09T15:08:21.700343Z",
-     "start_time": "2024-10-09T15:08:19.131663Z"
+     "end_time": "2024-10-10T05:48:32.540142Z",
+     "start_time": "2024-10-10T05:48:30.170045Z"
     }
    },
    "cell_type": "code",
@@ -137,11 +146,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.0012, Pos Dist: 0.0039, Neg Dist: 26.0174\n"
+      "Test Loss: 0.1018, Pos Cosine: 1.0000, Neg Cosine: 0.9982\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T05:48:32.603407Z",
+     "start_time": "2024-10-10T05:48:32.601917Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "8ba68ad63ab07669",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
