new notebook for adversarial training

--- a/mol2dreams/notebooks/model_training.ipynb
+++ b/mol2dreams/notebooks/model_training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-10T05:21:11.686382Z",
-     "start_time": "2024-10-10T05:21:11.679689Z"
+     "end_time": "2024-10-10T08:02:55.961021Z",
+     "start_time": "2024-10-10T08:02:54.531675Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     ")\n"
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -303,8 +303,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T05:21:26.334297Z",
-     "start_time": "2024-10-10T05:21:26.326842Z"
+     "end_time": "2024-10-10T08:03:00.339216Z",
+     "start_time": "2024-10-10T08:03:00.330708Z"
     }
    },
    "cell_type": "code",
@@ -316,26 +316,35 @@
    ],
    "id": "44243a4691ddc97c",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T05:21:28.622138Z",
-     "start_time": "2024-10-10T05:21:28.564835Z"
+     "end_time": "2024-10-10T08:03:01.074226Z",
+     "start_time": "2024-10-10T08:03:00.999280Z"
     }
    },
    "cell_type": "code",
    "source": "trainer = build_trainer_from_config(config)",
    "id": "3d91990123f87048",
-   "outputs": [],
-   "execution_count": 32
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/macbook/UTILS/anaconda3/envs/mol2dreams/lib/python3.11/site-packages/torch/nn/utils/weight_norm.py:28: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
+      "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T05:21:37.068941Z",
-     "start_time": "2024-10-10T05:21:31.489594Z"
+     "end_time": "2024-10-10T08:03:08.001082Z",
+     "start_time": "2024-10-10T08:03:02.472228Z"
     }
    },
    "cell_type": "code",
@@ -353,7 +362,7 @@
       "Epoch [5/50], Loss: 0.5990, Cosine Sim: 0.3817\n",
       "Validation Loss: 0.6345, Validation Cosine Sim: 0.3684\n",
       "Best model saved at epoch 5 with validation loss 0.6345\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_5.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_5.pt\n",
       "Epoch [6/50], Loss: 0.5369, Cosine Sim: 0.4357\n",
       "Epoch [7/50], Loss: 0.5789, Cosine Sim: 0.4225\n",
       "Epoch [8/50], Loss: 0.5908, Cosine Sim: 0.3988\n",
@@ -361,7 +370,7 @@
       "Epoch [10/50], Loss: 0.5477, Cosine Sim: 0.4480\n",
       "Validation Loss: 0.5989, Validation Cosine Sim: 0.3793\n",
       "Best model saved at epoch 10 with validation loss 0.5989\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_10.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_10.pt\n",
       "Epoch [11/50], Loss: 0.5266, Cosine Sim: 0.4531\n",
       "Epoch [12/50], Loss: 0.5716, Cosine Sim: 0.4424\n",
       "Epoch [13/50], Loss: 0.5568, Cosine Sim: 0.4523\n",
@@ -369,7 +378,7 @@
       "Epoch [15/50], Loss: 0.5418, Cosine Sim: 0.4645\n",
       "Validation Loss: 0.5908, Validation Cosine Sim: 0.3846\n",
       "Best model saved at epoch 15 with validation loss 0.5908\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_15.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_15.pt\n",
       "Epoch [16/50], Loss: 0.5623, Cosine Sim: 0.4433\n",
       "Epoch [17/50], Loss: 0.5607, Cosine Sim: 0.4638\n",
       "Epoch [18/50], Loss: 0.5339, Cosine Sim: 0.4614\n",
@@ -377,7 +386,7 @@
       "Epoch [20/50], Loss: 0.5620, Cosine Sim: 0.4498\n",
       "Validation Loss: 0.5406, Validation Cosine Sim: 0.4569\n",
       "Best model saved at epoch 20 with validation loss 0.5406\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_20.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_20.pt\n",
       "Epoch [21/50], Loss: 0.5254, Cosine Sim: 0.4695\n",
       "Epoch [22/50], Loss: 0.5306, Cosine Sim: 0.4784\n",
       "Epoch [23/50], Loss: 0.5411, Cosine Sim: 0.4637\n",
@@ -385,14 +394,14 @@
       "Epoch [25/50], Loss: 0.5346, Cosine Sim: 0.4912\n",
       "Validation Loss: 0.5360, Validation Cosine Sim: 0.4693\n",
       "Best model saved at epoch 25 with validation loss 0.5360\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_25.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_25.pt\n",
       "Epoch [26/50], Loss: 0.5175, Cosine Sim: 0.4936\n",
       "Epoch [27/50], Loss: 0.5481, Cosine Sim: 0.4920\n",
       "Epoch [28/50], Loss: 0.5335, Cosine Sim: 0.4798\n",
       "Epoch [29/50], Loss: 0.5453, Cosine Sim: 0.4566\n",
       "Epoch [30/50], Loss: 0.5541, Cosine Sim: 0.4606\n",
       "Validation Loss: 0.5433, Validation Cosine Sim: 0.4738\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_30.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_30.pt\n",
       "Epoch [31/50], Loss: 0.5311, Cosine Sim: 0.4913\n",
       "Epoch [32/50], Loss: 0.5196, Cosine Sim: 0.4889\n",
       "Epoch [33/50], Loss: 0.5228, Cosine Sim: 0.4744\n",
@@ -400,7 +409,7 @@
       "Epoch [35/50], Loss: 0.5204, Cosine Sim: 0.4670\n",
       "Validation Loss: 0.5348, Validation Cosine Sim: 0.4816\n",
       "Best model saved at epoch 35 with validation loss 0.5348\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_35.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_35.pt\n",
       "Epoch [36/50], Loss: 0.5536, Cosine Sim: 0.4737\n",
       "Epoch [37/50], Loss: 0.5384, Cosine Sim: 0.4815\n",
       "Epoch [38/50], Loss: 0.5188, Cosine Sim: 0.5031\n",
@@ -408,7 +417,7 @@
       "Epoch [40/50], Loss: 0.4994, Cosine Sim: 0.4918\n",
       "Validation Loss: 0.5250, Validation Cosine Sim: 0.4868\n",
       "Best model saved at epoch 40 with validation loss 0.5250\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_40.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_40.pt\n",
       "Epoch [41/50], Loss: 0.4980, Cosine Sim: 0.5102\n",
       "Epoch [42/50], Loss: 0.5268, Cosine Sim: 0.4898\n",
       "Epoch [43/50], Loss: 0.5098, Cosine Sim: 0.5089\n",
@@ -416,24 +425,24 @@
       "Epoch [45/50], Loss: 0.5242, Cosine Sim: 0.5072\n",
       "Validation Loss: 0.5113, Validation Cosine Sim: 0.5103\n",
       "Best model saved at epoch 45 with validation loss 0.5113\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_45.pt\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_45.pt\n",
       "Epoch [46/50], Loss: 0.5064, Cosine Sim: 0.5238\n",
       "Epoch [47/50], Loss: 0.5143, Cosine Sim: 0.4862\n",
       "Epoch [48/50], Loss: 0.5596, Cosine Sim: 0.4668\n",
       "Epoch [49/50], Loss: 0.5444, Cosine Sim: 0.4893\n",
       "Epoch [50/50], Loss: 0.5132, Cosine Sim: 0.4914\n",
       "Validation Loss: 0.5126, Validation Cosine Sim: 0.5104\n",
-      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_072128_mol2dreams/model_epoch_50.pt\n"
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_100301_mol2dreams/model_epoch_50.pt\n"
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-10T05:21:39.093300Z",
-     "start_time": "2024-10-10T05:21:39.048885Z"
+     "end_time": "2024-10-10T08:03:08.047990Z",
+     "start_time": "2024-10-10T08:03:08.008220Z"
     }
    },
    "cell_type": "code",
@@ -448,7 +457,7 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 5
   },
   {
    "metadata": {},
