update on notebooks

--- a/mol2dreams/notebooks/model_training.ipynb
+++ b/mol2dreams/notebooks/model_training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-10T08:02:55.961021Z",
-     "start_time": "2024-10-10T08:02:54.531675Z"
+     "end_time": "2024-10-10T09:54:59.761720Z",
+     "start_time": "2024-10-10T09:54:58.249537Z"
     }
    },
    "source": [
@@ -309,8 +309,6 @@
    },
    "cell_type": "code",
    "source": [
-    "import yaml\n",
-    "\n",
     "with open(\"/Users/macbook/CODE/mol2DreaMS/mol2dreams/configs/local_config_simple_dataset.yaml\") as stream:\n",
     "    config = yaml.safe_load(stream)"
    ],
@@ -458,6 +456,157 @@
     }
    ],
    "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Train Cosine Similarity loss",
+   "id": "f29ae4df7dd5a851"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T09:59:15.381116Z",
+     "start_time": "2024-10-10T09:59:15.372325Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with open(\"/Users/macbook/CODE/mol2DreaMS/mol2dreams/configs/local_config_train_cosin_loss.yaml\") as stream:\n",
+    "    config = yaml.safe_load(stream)"
+   ],
+   "id": "f782081546cc4c8b",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T09:59:15.667301Z",
+     "start_time": "2024-10-10T09:59:15.617173Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "trainer = build_trainer_from_config(config)",
+   "id": "1e353fcf03c53dd7",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T09:59:21.656247Z",
+     "start_time": "2024-10-10T09:59:15.798689Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "trainer.train()",
+   "id": "f8e8bd202a7c47d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/50], Loss: 0.8503, Cosine Sim: 0.1497\n",
+      "Epoch [2/50], Loss: 0.6596, Cosine Sim: 0.3404\n",
+      "Epoch [3/50], Loss: 0.6014, Cosine Sim: 0.3986\n",
+      "Epoch [4/50], Loss: 0.5931, Cosine Sim: 0.4069\n",
+      "Epoch [5/50], Loss: 0.5943, Cosine Sim: 0.4057\n",
+      "Validation Loss: 0.6047, Validation Cosine Sim: 0.3953\n",
+      "Best model saved at epoch 5 with validation loss 0.6047\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_5.pt\n",
+      "Epoch [6/50], Loss: 0.5368, Cosine Sim: 0.4632\n",
+      "Epoch [7/50], Loss: 0.5538, Cosine Sim: 0.4462\n",
+      "Epoch [8/50], Loss: 0.5796, Cosine Sim: 0.4204\n",
+      "Epoch [9/50], Loss: 0.5302, Cosine Sim: 0.4698\n",
+      "Epoch [10/50], Loss: 0.5233, Cosine Sim: 0.4767\n",
+      "Validation Loss: 0.6136, Validation Cosine Sim: 0.3864\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_10.pt\n",
+      "Epoch [11/50], Loss: 0.5120, Cosine Sim: 0.4880\n",
+      "Epoch [12/50], Loss: 0.5319, Cosine Sim: 0.4681\n",
+      "Epoch [13/50], Loss: 0.5338, Cosine Sim: 0.4662\n",
+      "Epoch [14/50], Loss: 0.5190, Cosine Sim: 0.4810\n",
+      "Epoch [15/50], Loss: 0.5068, Cosine Sim: 0.4932\n",
+      "Validation Loss: 0.6061, Validation Cosine Sim: 0.3939\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_15.pt\n",
+      "Epoch [16/50], Loss: 0.5347, Cosine Sim: 0.4653\n",
+      "Epoch [17/50], Loss: 0.5250, Cosine Sim: 0.4750\n",
+      "Epoch [18/50], Loss: 0.5326, Cosine Sim: 0.4674\n",
+      "Epoch [19/50], Loss: 0.5108, Cosine Sim: 0.4892\n",
+      "Epoch [20/50], Loss: 0.5340, Cosine Sim: 0.4660\n",
+      "Validation Loss: 0.5559, Validation Cosine Sim: 0.4441\n",
+      "Best model saved at epoch 20 with validation loss 0.5559\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_20.pt\n",
+      "Epoch [21/50], Loss: 0.5150, Cosine Sim: 0.4850\n",
+      "Epoch [22/50], Loss: 0.4985, Cosine Sim: 0.5015\n",
+      "Epoch [23/50], Loss: 0.5263, Cosine Sim: 0.4737\n",
+      "Epoch [24/50], Loss: 0.5115, Cosine Sim: 0.4885\n",
+      "Epoch [25/50], Loss: 0.4924, Cosine Sim: 0.5076\n",
+      "Validation Loss: 0.4995, Validation Cosine Sim: 0.5005\n",
+      "Best model saved at epoch 25 with validation loss 0.4995\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_25.pt\n",
+      "Epoch [26/50], Loss: 0.4934, Cosine Sim: 0.5066\n",
+      "Epoch [27/50], Loss: 0.4973, Cosine Sim: 0.5027\n",
+      "Epoch [28/50], Loss: 0.4986, Cosine Sim: 0.5014\n",
+      "Epoch [29/50], Loss: 0.5161, Cosine Sim: 0.4839\n",
+      "Epoch [30/50], Loss: 0.5212, Cosine Sim: 0.4788\n",
+      "Validation Loss: 0.4969, Validation Cosine Sim: 0.5031\n",
+      "Best model saved at epoch 30 with validation loss 0.4969\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_30.pt\n",
+      "Epoch [31/50], Loss: 0.4977, Cosine Sim: 0.5023\n",
+      "Epoch [32/50], Loss: 0.4901, Cosine Sim: 0.5099\n",
+      "Epoch [33/50], Loss: 0.4986, Cosine Sim: 0.5014\n",
+      "Epoch [34/50], Loss: 0.5038, Cosine Sim: 0.4962\n",
+      "Epoch [35/50], Loss: 0.5209, Cosine Sim: 0.4791\n",
+      "Validation Loss: 0.5213, Validation Cosine Sim: 0.4787\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_35.pt\n",
+      "Epoch [36/50], Loss: 0.5096, Cosine Sim: 0.4904\n",
+      "Epoch [37/50], Loss: 0.4896, Cosine Sim: 0.5104\n",
+      "Epoch [38/50], Loss: 0.4901, Cosine Sim: 0.5099\n",
+      "Epoch [39/50], Loss: 0.4792, Cosine Sim: 0.5208\n",
+      "Epoch [40/50], Loss: 0.4970, Cosine Sim: 0.5030\n",
+      "Validation Loss: 0.5283, Validation Cosine Sim: 0.4717\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_40.pt\n",
+      "Epoch [41/50], Loss: 0.4815, Cosine Sim: 0.5185\n",
+      "Epoch [42/50], Loss: 0.4994, Cosine Sim: 0.5006\n",
+      "Epoch [43/50], Loss: 0.4876, Cosine Sim: 0.5124\n",
+      "Epoch [44/50], Loss: 0.4835, Cosine Sim: 0.5165\n",
+      "Epoch [45/50], Loss: 0.4903, Cosine Sim: 0.5097\n",
+      "Validation Loss: 0.4836, Validation Cosine Sim: 0.5164\n",
+      "Best model saved at epoch 45 with validation loss 0.4836\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_45.pt\n",
+      "Epoch [46/50], Loss: 0.4730, Cosine Sim: 0.5270\n",
+      "Epoch [47/50], Loss: 0.5059, Cosine Sim: 0.4941\n",
+      "Epoch [48/50], Loss: 0.5258, Cosine Sim: 0.4742\n",
+      "Epoch [49/50], Loss: 0.4933, Cosine Sim: 0.5067\n",
+      "Epoch [50/50], Loss: 0.5102, Cosine Sim: 0.4898\n",
+      "Validation Loss: 0.5206, Validation Cosine Sim: 0.4794\n",
+      "Model checkpoint saved at ../../data/logs/mol2dreams/20241010_115915_mol2dreams/model_epoch_50.pt\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-10T09:59:21.708687Z",
+     "start_time": "2024-10-10T09:59:21.665130Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "trainer.test()",
+   "id": "2818df6961addcf6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.5206, Test Cosine Sim: 0.4794\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
